Fixed the display of the contacts section on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1660,6 +1660,8 @@ only screen and (min-resolution: 240dpi) {
 .contacts {
   position: absolute;
   top: 100px;
+  z-index: 2;
+
   width: 480px;
   padding: 60px 40px;
 
@@ -2106,6 +2108,7 @@ only screen and (min-resolution: 240dpi) {
 
   .section--map {
     height: 600px;
+    padding: 0;
   }
 
   /* About */
@@ -2379,7 +2382,11 @@ only screen and (min-resolution: 240dpi) {
   }
 
   .section--map {
+    display: flex;
+    flex-direction: column;
     height: 800px;
+    padding: 0;
+    background-color: #0d0f11;
   }
 
   .section__title {
@@ -2496,12 +2503,21 @@ only screen and (min-resolution: 240dpi) {
     gap: 20px;
   }
 
+  /* Map */
+  .map {
+    
+    order: 2;
+
+  }
+
   /* Contacts */
   .contacts {
+    position: static;
     width: 100%;
     top: 0;
     left: 0;
     right: 0;
+    order: 1;
 
     display: flex;
     flex-direction: column;
